[STR-2146] added geoname continents
