# api/rest/swagger.json
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_bldsoft_geos_pkg_entity.CityLite"
+                            "$ref": "#/definitions/entity.CityLite"
                         }
                     },
                     "400": {
@@ -76,7 +76,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_bldsoft_geos_pkg_entity.City"
+                            "$ref": "#/definitions/entity.City"
                         }
                     },
                     "400": {
@@ -116,7 +116,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_bldsoft_geos_pkg_entity.Country"
+                            "$ref": "#/definitions/entity.Country"
                         }
                     },
                     "400": {
@@ -127,6 +127,30 @@
                     },
                     "500": {
                         "description": "error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/env": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "text/yaml"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "get current environment",
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "type": "string"
                         }
@@ -149,7 +173,6 @@
                         "items": {
                             "type": "string"
                         },
-                        "collectionFormat": "csv",
                         "description": "comma separated list of country codes",
                         "name": "country-codes",
                         "in": "query"
@@ -161,7 +184,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_bldsoft_geos_pkg_entity.Geoname"
+                                "$ref": "#/definitions/entity.Geoname"
                             }
                         }
                     },
@@ -175,6 +198,28 @@
                         "description": "error",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/geoname/continent": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "geonames"
+                ],
+                "summary": "continent",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.GeoNameContinent"
+                            }
                         }
                     }
                 }
@@ -195,7 +240,6 @@
                         "items": {
                             "type": "string"
                         },
-                        "collectionFormat": "csv",
                         "description": "comma separated list of country codes",
                         "name": "country-codes",
                         "in": "query"
@@ -207,7 +251,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_bldsoft_geos_pkg_entity.GeoNameCountry"
+                                "$ref": "#/definitions/entity.GeoNameCountry"
                             }
                         }
                     },
@@ -241,7 +285,6 @@
                         "items": {
                             "type": "string"
                         },
-                        "collectionFormat": "csv",
                         "description": "comma separated list of country codes",
                         "name": "country-codes",
                         "in": "query"
@@ -253,7 +296,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_bldsoft_geos_pkg_entity.AdminSubdivision"
+                                "$ref": "#/definitions/entity.AdminSubdivision"
                             }
                         }
                     },
@@ -271,10 +314,62 @@
                     }
                 }
             }
+        },
+        "/ping": {
+            "get": {
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "public"
+                ],
+                "summary": "ping request",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/version": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "public"
+                ],
+                "summary": "get service version",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Version"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "github_com_bldsoft_geos_pkg_entity.AdminSubdivision": {
+        "Version": {
+            "type": "object",
+            "properties": {
+                "branch": {
+                    "type": "string"
+                },
+                "commit": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.AdminSubdivision": {
             "type": "object",
             "properties": {
                 "asciiName": {
@@ -291,7 +386,7 @@
                 }
             }
         },
-        "github_com_bldsoft_geos_pkg_entity.City": {
+        "entity.City": {
             "type": "object",
             "properties": {
                 "city": {
@@ -449,7 +544,7 @@
                 }
             }
         },
-        "github_com_bldsoft_geos_pkg_entity.CityLite": {
+        "entity.CityLite": {
             "type": "object",
             "properties": {
                 "city": {
@@ -472,11 +567,11 @@
                     }
                 },
                 "location": {
-                    "$ref": "#/definitions/github_com_bldsoft_geos_pkg_entity.LocationLite"
+                    "$ref": "#/definitions/entity.LocationLite"
                 }
             }
         },
-        "github_com_bldsoft_geos_pkg_entity.Country": {
+        "entity.Country": {
             "type": "object",
             "properties": {
                 "continent": {
@@ -572,7 +667,21 @@
                 }
             }
         },
-        "github_com_bldsoft_geos_pkg_entity.GeoNameCountry": {
+        "entity.GeoNameContinent": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "geoNameID": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.GeoNameCountry": {
             "type": "object",
             "properties": {
                 "area": {
@@ -634,7 +743,7 @@
                 }
             }
         },
-        "github_com_bldsoft_geos_pkg_entity.Geoname": {
+        "entity.Geoname": {
             "type": "object",
             "properties": {
                 "admin1Code": {
@@ -693,7 +802,7 @@
                 }
             }
         },
-        "github_com_bldsoft_geos_pkg_entity.LocationLite": {
+        "entity.LocationLite": {
             "type": "object",
             "properties": {
                 "latitude": {
