# pkg/controller/grpc/proto/geoname_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.12.4
+// - protoc             v3.15.8
 // source: api/grpc/geoname.proto
 
 package proto
@@ -22,6 +22,7 @@ const _ = grpc.SupportPackageIsVersion7
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type GeoNameServiceClient interface {
+	Continent(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_ContinentClient, error)
 	Country(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_CountryClient, error)
 	City(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_CityClient, error)
 	Subdivision(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_SubdivisionClient, error)
@@ -35,8 +36,40 @@ func NewGeoNameServiceClient(cc grpc.ClientConnInterface) GeoNameServiceClient {
 	return &geoNameServiceClient{cc}
 }
 
+func (c *geoNameServiceClient) Continent(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_ContinentClient, error) {
+	stream, err := c.cc.NewStream(ctx, &GeoNameService_ServiceDesc.Streams[0], "/geoname.GeoNameService/Continent", opts...)
+	if err != nil {
+		return nil, err
+	}
+	x := &geoNameServiceContinentClient{stream}
+	if err := x.ClientStream.SendMsg(in); err != nil {
+		return nil, err
+	}
+	if err := x.ClientStream.CloseSend(); err != nil {
+		return nil, err
+	}
+	return x, nil
+}
+
+type GeoNameService_ContinentClient interface {
+	Recv() (*GeoNameContinentResponse, error)
+	grpc.ClientStream
+}
+
+type geoNameServiceContinentClient struct {
+	grpc.ClientStream
+}
+
+func (x *geoNameServiceContinentClient) Recv() (*GeoNameContinentResponse, error) {
+	m := new(GeoNameContinentResponse)
+	if err := x.ClientStream.RecvMsg(m); err != nil {
+		return nil, err
+	}
+	return m, nil
+}
+
 func (c *geoNameServiceClient) Country(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_CountryClient, error) {
-	stream, err := c.cc.NewStream(ctx, &GeoNameService_ServiceDesc.Streams[0], "/geoname.GeoNameService/Country", opts...)
+	stream, err := c.cc.NewStream(ctx, &GeoNameService_ServiceDesc.Streams[1], "/geoname.GeoNameService/Country", opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -68,7 +101,7 @@ func (x *geoNameServiceCountryClient) Recv() (*GeoNameCountryResponse, error) {
 }
 
 func (c *geoNameServiceClient) City(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_CityClient, error) {
-	stream, err := c.cc.NewStream(ctx, &GeoNameService_ServiceDesc.Streams[1], "/geoname.GeoNameService/City", opts...)
+	stream, err := c.cc.NewStream(ctx, &GeoNameService_ServiceDesc.Streams[2], "/geoname.GeoNameService/City", opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -100,7 +133,7 @@ func (x *geoNameServiceCityClient) Recv() (*GeoNameCityResponse, error) {
 }
 
 func (c *geoNameServiceClient) Subdivision(ctx context.Context, in *GeoNameRequest, opts ...grpc.CallOption) (GeoNameService_SubdivisionClient, error) {
-	stream, err := c.cc.NewStream(ctx, &GeoNameService_ServiceDesc.Streams[2], "/geoname.GeoNameService/Subdivision", opts...)
+	stream, err := c.cc.NewStream(ctx, &GeoNameService_ServiceDesc.Streams[3], "/geoname.GeoNameService/Subdivision", opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -135,6 +168,7 @@ func (x *geoNameServiceSubdivisionClient) Recv() (*GeoNameSubdivisionResponse, e
 // All implementations must embed UnimplementedGeoNameServiceServer
 // for forward compatibility
 type GeoNameServiceServer interface {
+	Continent(*GeoNameRequest, GeoNameService_ContinentServer) error
 	Country(*GeoNameRequest, GeoNameService_CountryServer) error
 	City(*GeoNameRequest, GeoNameService_CityServer) error
 	Subdivision(*GeoNameRequest, GeoNameService_SubdivisionServer) error
@@ -145,6 +179,9 @@ type GeoNameServiceServer interface {
 type UnimplementedGeoNameServiceServer struct {
 }
 
+func (UnimplementedGeoNameServiceServer) Continent(*GeoNameRequest, GeoNameService_ContinentServer) error {
+	return status.Errorf(codes.Unimplemented, "method Continent not implemented")
+}
 func (UnimplementedGeoNameServiceServer) Country(*GeoNameRequest, GeoNameService_CountryServer) error {
 	return status.Errorf(codes.Unimplemented, "method Country not implemented")
 }
@@ -165,6 +202,27 @@ type UnsafeGeoNameServiceServer interface {
 
 func RegisterGeoNameServiceServer(s grpc.ServiceRegistrar, srv GeoNameServiceServer) {
 	s.RegisterService(&GeoNameService_ServiceDesc, srv)
+}
+
+func _GeoNameService_Continent_Handler(srv interface{}, stream grpc.ServerStream) error {
+	m := new(GeoNameRequest)
+	if err := stream.RecvMsg(m); err != nil {
+		return err
+	}
+	return srv.(GeoNameServiceServer).Continent(m, &geoNameServiceContinentServer{stream})
+}
+
+type GeoNameService_ContinentServer interface {
+	Send(*GeoNameContinentResponse) error
+	grpc.ServerStream
+}
+
+type geoNameServiceContinentServer struct {
+	grpc.ServerStream
+}
+
+func (x *geoNameServiceContinentServer) Send(m *GeoNameContinentResponse) error {
+	return x.ServerStream.SendMsg(m)
 }
 
 func _GeoNameService_Country_Handler(srv interface{}, stream grpc.ServerStream) error {
@@ -238,6 +296,11 @@ var GeoNameService_ServiceDesc = grpc.ServiceDesc{
 	HandlerType: (*GeoNameServiceServer)(nil),
 	Methods:     []grpc.MethodDesc{},
 	Streams: []grpc.StreamDesc{
+		{
+			StreamName:    "Continent",
+			Handler:       _GeoNameService_Continent_Handler,
+			ServerStreams: true,
+		},
 		{
 			StreamName:    "Country",
 			Handler:       _GeoNameService_Country_Handler,
